# claude-usage-tray

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: analytics.rs  config.rs  error.rs  fetch.rs  lib.rs  model.rs  report.rs  storage.rs
crates/tray/: Cargo.toml
crates/tray/src/: autostart.rs  commands.rs  icons.rs  main.rs  poller.rs  tray_ui.rs  updater.rs  webviews.rs
npm/: install.js  package.json
scripts/: sync-versions.mjs
