[workspace]
resolver = "2"
members = ["crates/core", "crates/tray"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Laurent Rochetta"]
repository = "https://github.com/lrochetta/claude-usage-tray"
homepage = "https://github.com/lrochetta/claude-usage-tray"
readme = "README.md"
rust-version = "1.80"

[workspace.dependencies]
# Shared deps pinned here, inherited by crates via `.workspace = true`
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
jiff = { version = "0.1", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = { version = "2", features = ["json", "tls"] }
crossbeam-channel = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
