[package]
name = "claude-usage-tray-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core library for claude-usage-tray — fetch, store, analyze Claude Code usage metrics"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }
jiff = { workspace = true }
rusqlite = { workspace = true }
ureq = { workspace = true }
